force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>ABHIL</description>
    <label>Claim</label>
    <nameField>
        <label>Claim Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>