force-app/main/default/objects/Claim__c/fields/Balance_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sum_Insured__c</fullName>
    <description>ABHI</description>
    <label>Balance Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>