force-app/main/default/objects/Claim__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <description>ABHI</description>
    <label>Beneficiary Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>