force-app/main/default/objects/Claim__c/fields/Benefit_info__c.field-meta.xml
<CustomField>
    <fullName>Benefit_info__c</fullName>
    <description>ABHI</description>
    <label>Benefit info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>