force-app/main/default/objects/Claim__c/fields/Chronic_tagging__c.field-meta.xml
<CustomField>
    <fullName>Chronic_tagging__c</fullName>
    <description>ABHI</description>
    <label>Chronic tagging</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>