force-app/main/default/objects/Claim__c/fields/claim_Intimation_received_date__c.field-meta.xml
<CustomField>
    <fullName>claim_Intimation_received_date__c</fullName>
    <description>ABHI</description>
    <label>Claim Intimation Date</label>
    <type>Date</type>
</CustomField>