force-app/main/default/objects/Claim__c/fields/Claim_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Claim_Sequence__c</fullName>
    <displayFormat>CL-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Claim Sequence</label>
    <type>AutoNumber</type>
</CustomField> 