force-app/main/default/objects/Claim__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <description>ABHIL</description>
    <label>Claim Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>