force-app/main/default/objects/Claim__c/fields/Claim_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Sub_Type__c</fullName>
    <description>ABHIL</description>
    <label>Claim Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>