force-app/main/default/objects/Claim__c/fields/ClaimExternalId__c.field-meta.xml
<CustomField>
    <fullName>ClaimExternalId__c</fullName>
    <description>ABHI</description>
    <externalId>true</externalId>
    <label>Claim External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>