force-app/main/default/objects/Claim__c/fields/Co_Payment__c.field-meta.xml
<CustomField>
    <fullName>Co_Payment__c</fullName>
    <description>ABHI - IS INW claims comes from Jarvis</description>
    <label>Co Payment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>