force-app/main/default/objects/Claim__c/fields/Cover_Code__c.field-meta.xml
<CustomField>
    <fullName>Cover_Code__c</fullName>
    <description>ABHIL</description>
    <label>Cover Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>