force-app/main/default/objects/Claim__c/fields/Cover_Name__c.field-meta.xml
<CustomField>
    <fullName>Cover_Name__c</fullName>
    <description>ABHI</description>
    <label>Cover Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>