force-app/main/default/objects/Claim__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHI</description>
    <label>Member Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Customer)</relationshipLabel>
    <relationshipName>Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>