force-app/main/default/objects/Claim__c/fields/Customer_Member_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Customer_Member_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHI -  Lookup to account (Customer member mapping record id)</description>
    <label>Customer Member Mapping</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>