force-app/main/default/objects/Claim__c/fields/Date_of_admission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_admission__c</fullName>
    <description>ABHI</description>
    <label>Date of admission</label>
    <type>DateTime</type>
</CustomField>