force-app/main/default/objects/Claim__c/fields/Date_of_discharge__c.field-meta.xml
<CustomField>
    <fullName>Date_of_discharge__c</fullName>
    <description>ABHI</description>
    <label>Date of discharge</label>
    <type>DateTime</type>
</CustomField>