force-app/main/default/objects/Claim__c/fields/Deducted_amount__c.field-meta.xml
<CustomField>
    <fullName>Deducted_amount__c</fullName>
    <description>ABHI</description>
    <label>Deducted amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>