force-app/main/default/objects/Claim__c/fields/Deduction_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Reasons__c</fullName>
    <description>ABHI</description>
    <label>Deduction Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>