force-app/main/default/objects/Claim__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>ABHI</description>
    <label>Diagnosis Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>