force-app/main/default/objects/Claim__c/fields/Family_Id__c.field-meta.xml
<CustomField>
    <fullName>Family_Id__c</fullName>
    <description>ABHIL</description>
    <label>Family Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>