force-app/main/default/objects/Claim__c/fields/Hospital_Code__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHI</description>
    <label>Hospital Name</label>
    <referenceTo>Health_Provider__c</referenceTo>
    <relationshipLabel>Claims (Hospital Code)</relationshipLabel>
    <relationshipName>Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>