force-app/main/default/objects/Claim__c/fields/Hospital_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Contact_Number__c</fullName>
    <description>ABHIL</description>
    <label>Hospital Contact Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>