force-app/main/default/objects/Claim__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHIL - Lookup to health provider</description>
    <label>Hospital Name</label>
    <referenceTo>Health_Provider__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>