force-app/main/default/objects/Claim__c/fields/Hospital_Provider__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Provider__c</fullName>
    <description>ABHI</description>
    <formula>Hospital_Code__r.Provider_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Name</label>
    <type>Text</type>
</CustomField>