force-app/main/default/objects/Claim__c/fields/IFSC_code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_code__c</fullName>
    <description>ABHIL</description>
    <label>IFSC code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>