force-app/main/default/objects/Claim__c/fields/Intimation_Type__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Type__c</fullName>
    <description>ABHIL</description>
    <label>Intimation Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>