force-app/main/default/objects/Claim__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description>ABHI</description>
    <label>Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>