force-app/main/default/objects/Claim__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <description>ABHIL</description>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>