force-app/main/default/objects/Claim__c/fields/Policy_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>Policy_No_Formula__c</fullName>
    <formula>Policy_Number__r.Policy_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy No</label>
    <type>Text</type>
</CustomField>