force-app/main/default/objects/Claim__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>ABHI</description>
    <label>Policy Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>