force-app/main/default/objects/Claim__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>