force-app/main/default/objects/Claim__c/fields/Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Code__c</fullName>
    <description>ABHIL</description>
    <label>Provider Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>