force-app/main/default/objects/Claim__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>ABHI</description>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>OPD Centre/Clinic</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Diagnostic Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>