force-app/main/default/objects/Claim__c/fields/Repudiation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Repudiation_Reasons__c</fullName>
    <description>ABHI</description>
    <label>Repudiation Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>