force-app/main/default/objects/Claim__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>ABHIL</description>
    <label>Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>