force-app/main/default/objects/Claim__c/fields/Reverse_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Amount__c</fullName>
    <description>ABHI</description>
    <label>Reverse Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>