force-app/main/default/objects/Claim__c/fields/Room_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Room_Eligibility__c</fullName>
    <description>ABHI</description>
    <label>Room Eligibility</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>