force-app/main/default/objects/Claim__c/fields/Sales_Person_Emp_id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Emp_id__c</fullName>
    <description>ABHIL</description>
    <label>Sales Person Emp id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>