force-app/main/default/objects/Claim__c/fields/Sales_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Name__c</fullName>
    <description>ABHI</description>
    <label>Sales Person Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>