force-app/main/default/objects/Claim__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>ABHI</description>
    <label>Claim Settled Date</label>
    <type>Date</type>
</CustomField>