force-app/main/default/objects/Claim__c/fields/Total_amount_approved__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_approved__c</fullName>
    <description>ABHI</description>
    <label>Total amount approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>