force-app/main/default/objects/Claim__c/fields/UTR_Number__c.field-meta.xml
<CustomField>
    <fullName>UTR_Number__c</fullName>
    <description>ABHIL</description>
    <label>UTR Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>