force-app/main/default/objects/Claim__c/fields/VCM_Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>VCM_Service_Flag__c</fullName>
    <description>ABHIL</description>
    <label>VCM Service Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>